# tg_task_tracker

./: .env.dist  Dockerfile  README.md  loader.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: config.py
handlers/users/: __init__.py  help.py  start.py  todo.py
middlewares/: __init__.py  throttling.py
src/: loader.py  main.py
src/data/: config.py
src/handlers/users/: help.py  start.py  todo.py
src/middlewares/: __init__.py  my_id.py
src/utils/: keyboards.py  notify_admins.py  set_bot_commands.py  text_generation.py
src/utils/API/: APIcontroller.py  baseAPI.py  notionAPI.py  todoistAPI.py
utils/: keyboards.py  notify_admins.py  set_bot_commands.py  text_generation.py
utils/API/: APIcontroller.py  baseAPI.py  notionAPI.py  todoistAPI.py
